--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -37,6 +37,6 @@ jobs:
         username: root
         password: formY5@project
         port: 22
-        protocol: sftp
+        protocol: ftps
         server-dir: /var/www/html
         log-level	: standard
