--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,9 +2,9 @@ name: PHP Composer
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "develop" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "develop" ]
 
 permissions:
   contents: read
@@ -35,6 +35,7 @@ jobs:
         server: ftp.sru.jdh.mybluehost.me
         username: git@sru.jdh.mybluehost.me
         password: hello@123456
+        server-dir: server/
         exclude: |
           **/.git*
           **/.git*/**
